--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -1,13 +1,15 @@
 body {
     display: grid;
     height: 100vh;
-    grid-template: auto auto 1fr auto / 300px 1fr auto;
+    grid-template: auto 1fr auto / 1fr 1fr 1fr;
 }
 
 header {
+
     background: lightpink;
-    padding: 2rem;
     grid-column: 1 / 4;
+
+
 }
 
 nav {
@@ -15,7 +17,7 @@ nav {
     display: flex;
     background: green;
     padding: 2rem;
-    grid-column: 1 / 4;
+
 }
 
 
@@ -27,6 +29,7 @@ main {
 .right-sidebar {
     background: yellow;
     grid-column: 3 / 4;
+    padding: 1rem;
 }
 
 footer {
@@ -34,9 +37,4 @@ footer {
     padding: 2rem;
     text-align: center;
     grid-column: 1 / 4;
-}
-
-.left-sidebar,
-.right-sidebar {
-    padding: 1rem;
 }
