--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -1,4 +1,5 @@
 body {
+
     display: grid;
     height: 100vh;
     grid-template: auto 1fr auto / 1fr 1fr 1fr;
@@ -6,34 +7,41 @@ body {
 
 header {
 
-    background: lightpink;
+    background: gray;
+    color: white;
     grid-column: 1 / 4;
 
 
 }
 
 nav {
-
+    background: black;
     display: flex;
-    background: green;
     padding: 2rem;
+    justify-content: space-around;
+}
+
+a {
+    color: white;
 
 }
 
-
 main {
-    background: coral;
+    background: lightgray;
+    color: black;
     grid-column: 1 / 3;
 }
 
 .right-sidebar {
-    background: yellow;
+    background: white;
+    color: black;
     grid-column: 3 / 4;
     padding: 1rem;
 }
 
 footer {
-    background: wheat;
+    background: gray;
+    color: white;
     padding: 2rem;
     text-align: center;
     grid-column: 1 / 4;
