--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -14,6 +14,8 @@ header {
 
 }
 
+
+
 nav {
     background: black;
     display: flex;
@@ -22,6 +24,7 @@ nav {
 }
 
 a {
+    flex: auto;
     color: white;
 
 }
