--- a/styles/place.css
+++ b/styles/place.css
@@ -1,22 +1,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&family=Noto+Serif:wght@300&display=swap');
 
-.hero picture img {
-    
+:root {
+    --gray: #B6B6BD;
+    --red: #DF061D;
+ }
 
-        width: 100%;
-        height: auto;
-        box-shadow: 0 0 10px #333;
-    
-      }
+
+ .hero picture img {
+
+
+    width: 100%;
+    height: auto;
+    box-shadow: 0 0 10px #333;
+
+}
 
 header {
 
-    background-color: #DF061D;
-    color:white;
+    background-color: var(--red);
+    color: white;
     text-align: center;
-    font-family:'Lato', Helvetica, sans-serif;
+    font-family: 'Lato', Helvetica, sans-serif;
     box-shadow: 0 0 10px #333;
-   
+
 
 }
 
@@ -28,42 +34,42 @@ header h1 {
 
 
 footer {
-    background: #B6B6BD;
+    background: var(--gray);
     color: black;
     padding: 2rem;
     text-align: center;
     grid-column: 1 / 4;
     font-family: 'Lato', Helvetica, sans-serif;
-    font-weight:bold ;
+    font-weight: bold;
     box-shadow: 0 0 10px #333;
 }
 
-.data{
+.data {
 
     display: grid;
     grid-template-columns: 1fr 1fr;
- 
+
 }
 
-.weather{
+.weather {
 
     display: grid;
     grid-template-columns: 1fr 1fr;
- 
+
 }
 
 
-.label p{
+.label p {
 
     font-family: 'Lato', Helvetica, sans-serif;
     color: black;
-    font-weight:bold ;
+    font-weight: bold;
 }
 
 .data .label {
 
     grid-column: 1 / 2;
-    text-align:right;
+    text-align: right;
     padding-right: 10px;
 
 
@@ -72,7 +78,7 @@ footer {
 .weather .label {
 
     grid-column: 1 / 2;
-    text-align:right;
+    text-align: right;
     padding-right: 10px;
 
 
@@ -81,38 +87,38 @@ footer {
 .weather .text {
 
     grid-column: 2 / 3;
-    text-align:left;
+    text-align: left;
     padding-right: 10px;
 
 
 }
 
-.data h2{
+.data h2 {
 
     grid-column: 1/4;
 }
 
 
-.weather h2{
+.weather h2 {
 
     grid-column: 1/4;
-    
+
 }
 
-.weather picture{
+.weather picture {
 
     grid-column: 1/4;
-    text-align:center;
+    text-align: center;
     width: 100%;
     height: auto;
 
-    
+
 }
 
 
 .data {
 
-    background-color:#F4E8D5 ;
+    background-color: #F4E8D5;
     box-shadow: 0 0 10px #333;
 
 }
@@ -120,7 +126,7 @@ footer {
 
 .weather {
 
-    background-color:#F4E8D5 ;
+    background-color: #F4E8D5;
     box-shadow: 0 0 10px #333;
     margin-top: 5px;
     margin-bottom: 5px;
@@ -128,11 +134,11 @@ footer {
 
 }
 
-.text p{
+.text p {
 
     font-family: 'Lato', Helvetica, sans-serif;
     color: black;
-   
+
 }
 
 
@@ -140,9 +146,7 @@ h2 {
 
     font-family: 'Lato', Helvetica, sans-serif;
     color: black;
-    font-weight:bold ;
-    text-align:center;
+    font-weight: bold;
+    text-align: center;
 
 }
-
-
