--- a/styles/form.css
+++ b/styles/form.css
@@ -62,6 +62,16 @@ h3 {
 }
 
 
+.wf1 div {
+    display: block;
+    padding-top: 1rem;
+    color: black;
+    font-weight: bold;
+    font-size: .9rem;
+}
+
+
+
 .wf1 label {
     display: block;
     padding-top: 1rem;
@@ -69,6 +79,7 @@ h3 {
     font-weight: bold;
     font-size: .9rem;
 }
+
 
 
 
@@ -86,12 +97,6 @@ h3 {
     font-family: 'Lato', Helvetica, sans-serif;
 }
 
-.wf1 input[type="radio"],
-.wf1 input[type="checkbox"] {
-    margin: 10px;
-
-}
-
 .wf1 input[type="submit"] {
     display: block;
     border: none;
@@ -102,9 +107,7 @@ h3 {
     width: 100%;
     max-width: 400px;
     box-shadow: 1px 1px 4px #999;
-
     margin: 10px;
-
 }
 
 
@@ -126,12 +129,12 @@ h3 {
     text-align-last: center;
 }
 
-#italic {
+.italic {
 
     font-style: italic;
 }
 
-#optional {
+.optional {
 
     color: blue;
 }
